fix(v2): align search icon on small width device (#1893)
* fix(v2): align search icon on small width device

* nits

* nits

--- a/packages/docusaurus-theme-search-algolia/src/theme/SearchBar/styles.css
+++ b/packages/docusaurus-theme-search-algolia/src/theme/SearchBar/styles.css
@@ -74,6 +74,7 @@
 
   .search-icon {
     display: inline;
+    vertical-align: sub;
   }
 
 }
